--- a/hoat-dong.html
+++ b/hoat-dong.html
@@ -106,6 +106,32 @@
             </div>
           </div>
         </div>
+
+        <!-- Teambuilding -->
+        <div class="activity-section">
+          <h2>Teambuilding</h2>
+          <p class="text-muted">Hoạt động teambuilding giúp gắn kết các thành viên, tạo ra một môi trường làm việc nhóm hiệu quả và đầy năng lượng.</p>
+          <div class="row g-4 mt-2 activity-gallery">
+            <div class="col-md-4">
+              <img src="image/hoat-dong/teambuilding/teambuilding1.webp" alt="Teambuilding 1" />
+            </div>
+            <div class="col-md-4">
+              <img src="image/hoat-dong/teambuilding/teambuilding2.webp" alt="Teambuilding 2" />
+            </div>
+            <div class="col-md-4">
+              <img src="image/hoat-dong/teambuilding/teambuilding3.webp" alt="Teambuilding 3" />
+            </div>
+            <div class="col-md-4">
+              <img src="image/hoat-dong/teambuilding/teambuilding4.webp" alt="Teambuilding 4" />
+            </div>
+            <div class="col-md-4">
+              <img src="image/hoat-dong/teambuilding/teambuilding5.webp" alt="Teambuilding 5" />
+            </div>
+            <div class="col-md-4">
+              <img src="image/hoat-dong/teambuilding/teambuilding6.webp" alt="Teambuilding 6" />
+            </div>
+          </div>
+        </div>
       </div>
     </main>
 
