--- a/su-kien.html
+++ b/su-kien.html
@@ -67,7 +67,7 @@
                   </div>
                 </div>
                 <div class="col-lg-7">
-                  <h5 class="fw-semibold mb-1">Workshop: Vận hành ERP trong doanh nghiệp</h5>
+                  <h5 class="fw-semibold mb-1">Workshop: ERP 4.0 Powering Supply Chains with Data Intelligence</h5>
                   <div class="text-muted small mb-2">Chia sẻ từ chuyên gia giàu kinh nghiệm</div>
                   <p class="mb-2">Workshop cung cấp kiến thức tổng quan về hệ thống ERP, vai trò và lợi ích trong quản trị doanh nghiệp hiện đại. Sinh viên được tìm hiểu về quy trình vận hành thực tế và cơ hội nghề nghiệp trong lĩnh vực ERP.</p>
                 </div>
@@ -94,9 +94,9 @@
                   </div>
                 </div>
                 <div class="col-lg-7">
-                  <h5 class="fw-semibold mb-1">Workshop: E-commerce & Vận hành sàn Shopee</h5>
-                  <div class="text-muted small mb-2">Hợp tác cùng CLB Thương mại điện tử (ECC)</div>
-                  <p class="mb-2">Cung cấp kiến thức từ cơ bản đến nâng cao về E-commerce, cách xây dựng và vận hành một gian hàng trên Shopee. Buổi chia sẻ giúp sinh viên hiểu rõ hơn về tiềm năng của ngành và các kỹ năng cần thiết để thành công.</p>
+                  <h5 class="fw-semibold mb-1">Workshop: QUY TRÌNH VÀ CÔNG NGHỆ VẬN HÀNH LOGISTICS CHO THƯƠNG MẠI ĐIỆN TỬ</h5>
+                  <div class="text-muted small mb-2">Hợp tác cùng SPX</div>
+                  <p class="mb-2">Cung cấp kiến thức từ cơ bản đến nâng cao về cách vận hành của SPX. Buổi chia sẻ giúp sinh viên hiểu rõ hơn về tiềm năng của ngành và các kỹ năng cần thiết để thành công trong quản lý vận hành.</p>
                 </div>
               </div>
             </div>
