--- a/cuoc-thi.html
+++ b/cuoc-thi.html
@@ -91,9 +91,9 @@
             <img src="image/cuoc-thi/nlkt2024/nlkt.webp" alt="Cuộc thi NLKT" class="img-fluid rounded-4" style="box-shadow: 0 16px 40px rgba(0,0,0,0.12);" />
           </div>
           <div class="col-lg-6">
-            <h2 class="fw-bold mb-3">Cuộc thi Nhà Logistics trẻ</h2>
+            <h2 class="fw-bold mb-3">Cuộc thi Nhìn lại kinh tế</h2>
             <p class="text-muted">
-              "Nhà Logistics trẻ" là một cuộc thi học thuật đầy kịch tính, nơi các tài năng trẻ đam mê lĩnh vực Logistics có cơ hội thể hiện kiến thức chuyên môn, kỹ năng giải quyết vấn đề và tư duy chiến lược.
+              "Nhìn lại kinh tế" là một cuộc thi học thuật đầy kịch tính, mang đến cho bạn một sân chơi vận dụng kiến thức chuyên môn, kỹ năng giải quyết vấn đề và tư duy chiến lược.
             </p>
             <div class="d-flex align-items-center gap-3 my-4">
               <span class="badge bg-primary-subtle text-primary-emphasis rounded-pill px-3 py-2">Mùa giải 2024</span>
