--- a/lien-he.html
+++ b/lien-he.html
@@ -43,38 +43,15 @@
     <main class="section">
       <div class="container">
         <h1 class="section-title">LIÊN HỆ VỚI HLS</h1>
-        <div class="row g-4 mt-1">
-          <div class="col-lg-6">
-            <div class="card border-0 shadow-sm p-4 h-100">
-              <form>
-                <div class="mb-3">
-                  <label class="form-label">Họ và tên</label>
-                  <input type="text" class="form-control" placeholder="Nguyễn Văn A" required />
-                </div>
-                <div class="mb-3">
-                  <label class="form-label">Email</label>
-                  <input type="email" class="form-control" placeholder="ban@hust.edu.vn" required />
-                </div>
-                <div class="mb-3">
-                  <label class="form-label">Tiêu đề</label>
-                  <input type="text" class="form-control" placeholder="Tiêu đề tin nhắn" />
-                </div>
-                <div class="mb-3">
-                  <label class="form-label">Nội dung</label>
-                  <textarea rows="5" class="form-control" placeholder="Nội dung tin nhắn..."></textarea>
-                </div>
-                <button type="submit" class="btn btn-primary px-4">Gửi tin nhắn</button>
-              </form>
-            </div>
-          </div>
-          <div class="col-lg-6">
+        <div class="row g-4 mt-1 justify-content-center">
+          <div class="col-lg-8">
             <div class="card border-0 shadow-sm h-100">
               <div class="card-body">
                 <h5 class="fw-bold">Thông tin liên hệ</h5>
                 <ul class="list-unstyled mt-3 mb-4">
                   <li class="mb-2">Email: <a href="mailto:ketnoi@hustlogistics.com">ketnoi@hustlogistics.com</a></li>
                   <li class="mb-2">Fanpage: <a href="https://www.facebook.com/hlshust">Facebook - HLS</a></li>
-                  <li class="mb-2">LinkedIn: <a href="#">HLS</a></li> 
+                  <li class="mb-2">LinkedIn: <a href="#">Coming soon</a></li> 
                   <li class="mb-2">Địa chỉ:  Đại học Bách Khoa Hà Nội</li>
                 </ul>
                 <div class="ratio ratio-16x9 rounded overflow-hidden">
