--- a/index.html
+++ b/index.html
@@ -223,16 +223,16 @@ Bên cạnh đó, HLS cũng đóng vai trò như một cầu nối giữa các b
                 </ul>
                 Là “xương sống” của mọi hoạt động, Ban Sự kiện chịu trách nhiệm tổ chức, điều phối và đảm bảo chương trình được triển khai suôn sẻ, chuyên nghiệp, mang lại trải nghiệm tốt nhất cho người tham gia. Với nhiệm vụ :
                 <ul>
-                Chủ trì công tác chuẩn bị và hậu cần trước – trong – sau sự kiện, đảm bảo mọi chi tiết đều được triển khai đúng kế hoạch.
+                - Chủ trì công tác chuẩn bị và hậu cần trước – trong – sau sự kiện, đảm bảo mọi chi tiết đều được triển khai đúng kế hoạch.
                 </ul>
                 <ul>
-                Quản lý và kiểm soát các vấn đề tài chính của sự kiện: lập dự trù, theo dõi chi tiêu, đảm bảo tính minh bạch và hiệu quả.
+                - Quản lý và kiểm soát các vấn đề tài chính của sự kiện: lập dự trù, theo dõi chi tiêu, đảm bảo tính minh bạch và hiệu quả.
                 </ul>
                 <ul>
-                Phụ trách kỹ thuật, phân công và điều phối nhân sự theo từng khu vực, tối ưu hóa nguồn lực để sự kiện vận hành trơn tru.
+                - Phụ trách kỹ thuật, phân công và điều phối nhân sự theo từng khu vực, tối ưu hóa nguồn lực để sự kiện vận hành trơn tru.
                 </ul>
                 <ul>
-                Phối hợp chặt chẽ với Ban Truyền thông để xây dựng hình ảnh sự kiện chuyên nghiệp, thu hút và lan tỏa giá trị của CLB đến cộng đồng.
+                - Phối hợp chặt chẽ với Ban Truyền thông để xây dựng hình ảnh sự kiện chuyên nghiệp, thu hút và lan tỏa giá trị của CLB đến cộng đồng.
                 </ul>
               </p>
             </div>
@@ -270,19 +270,16 @@ Bên cạnh đó, HLS cũng đóng vai trò như một cầu nối giữa các b
               <p class="mb-0 text-muted-2">
                 Ban Nhân sự chịu trách nhiệm toàn bộ các khâu liên quan đến con người trong tổ chức, từ việc thu hút đến phát triển và giữ chân nhân tài, đảm bảo môi trường làm việc hiệu quả và gắn kết. Với nhiệm vụ :
                 <ul>
-                Tuyển dụng: Tìm kiếm, phỏng vấn, và chọn lọc ứng viên phù hợp.
+                - Phát triển: Xây dựng đào tạo, lộ trình phát triển và giữ chân nhân sự.
                 </ul>
                 <ul>
-                Phát triển: Xây dựng đào tạo, lộ trình phát triển và giữ chân nhân sự.
+                - Đánh giá & Quyền lợi: Triển khai đánh giá hiệu suất, đảm bảo quyền lợi và khen thưởng.
                 </ul>
                 <ul>
-                Đánh giá & Quyền lợi: Triển khai đánh giá hiệu suất, đảm bảo quyền lợi và khen thưởng.
+                - Gắn kết: Lên kế hoạch sự kiện team-building, nắm bắt tâm tư để xây dựng môi trường làm việc tích cực.
                 </ul>
                 <ul>
-                Gắn kết: Tổ chức sự kiện team-building, nắm bắt tâm tư để xây dựng môi trường làm việc tích cực.
-                </ul>
-                <ul>
-                Hợp tác: Phối hợp với các ban khác để đáp ứng nhu cầu nhân sự chung.
+                - Hợp tác: Phối hợp với các ban khác để đáp ứng nhu cầu nhân sự chung.
                 </ul>
                 
               </p>
