--- a/cuoc-thi.html
+++ b/cuoc-thi.html
@@ -57,7 +57,7 @@
           <div class="col-lg-6">
             <h2 class="fw-bold mb-3">Cuộc thi SCRACE</h2>
             <p class="text-muted">
-              SRACE là cuộc thi thường niên lớn nhất của CLB, tạo ra một sân chơi học thuật chuyên nghiệp về Logistics và Quản lý chuỗi cung ứng cho sinh viên. Thí sinh sẽ trải qua các vòng thi đầy thử thách, từ giải case study, thuyết trình đến phản biện, để tìm ra nhà vô địch xứng đáng.
+              SCRACE là cuộc thi thường niên lớn nhất của CLB, tạo ra một sân chơi học thuật chuyên nghiệp về Logistics và Quản lý chuỗi cung ứng cho sinh viên. Thí sinh sẽ trải qua các vòng thi đầy thử thách, từ giải case study, thuyết trình đến phản biện, để tìm ra nhà vô địch xứng đáng.
             </p>
             <div class="d-flex align-items-center gap-3 my-4">
               <span class="badge bg-primary-subtle text-primary-emphasis rounded-pill px-3 py-2">Mùa giải 2025</span>
