--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
       }
     </script>
     <!-- Open Graph Meta Tags -->
-    <meta property="og:title" content="HLS - CLB Hỗ Trợ Học Thuật" />
-    <meta property="og:description" content="Website chính thức của CLB Hỗ Trợ Học Thuật - HLS" />
+    <meta property="og:title" content="HLS - CLB Logistics and Supply Chain Đại học Bách Khoa Hà Nội" />
+    <meta property="og:description" content="Website chính thức của CLB HLS" />
     <meta property="og:image" content="image/logo/thumbnailog.webp" />
     <meta property="og:url" content="https://hls-website.vercel.app/" />
     <meta property="og:type" content="website" />
