--- a/hoat-dong.html
+++ b/hoat-dong.html
@@ -12,8 +12,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
     <link rel="stylesheet" href="css/style.css" />
     <!-- Open Graph Meta Tags -->
-    <meta property="og:title" content="HLS - CLB Hỗ Trợ Học Thuật" />
-    <meta property="og:description" content="Website chính thức của CLB Hỗ Trợ Học Thuật - HLS" />
+    <meta property="og:title" content="HLS - CLB Logistics and Supply Chain Đại học Bách Khoa Hà Nội" />
+    <meta property="og:description" content="Website chính thức của CLB HLS" />
     <meta property="og:image" content="image/logo/thumbnailog.webp" />
     <meta property="og:url" content="https://hls-website.vercel.app/hoat-dong.html" />
     <meta property="og:type" content="website" />
