add gg analytics

--- a/su-kien.html
+++ b/su-kien.html
@@ -17,6 +17,15 @@
     <meta property="og:image" content="image/logo/thumbnailog.webp" />
     <meta property="og:url" content="https://hls-website.vercel.app/su-kien.html" />
     <meta property="og:type" content="website" />
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-26FZD47JPH"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-26FZD47JPH');
+    </script>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg sticky-top bg-white">
