--- a/index.html
+++ b/index.html
@@ -37,6 +37,15 @@
     <meta property="og:image" content="image/logo/thumbnailog.webp" />
     <meta property="og:url" content="https://hls-website.vercel.app/" />
     <meta property="og:type" content="website" />
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-26FZD47JPH"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-26FZD47JPH');
+    </script>
   </head>
   <body>
     <!-- Header / Navbar -->
