fix mobile interface

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
               stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round" />
           </svg>
         </button>
-        <div aria-label="Thành viên CLB" class="tw-mt-16 tw-flex tw-max-md:overflow-x-auto tw-gap-6 tw-max-w-5xl tw-w-full tw-pb-6 tw-justify-center">
+        <div aria-label="Thành viên CLB" class="hero-image-scroll tw-mt-16 tw-flex tw-gap-6 tw-max-w-5xl tw-w-full tw-pb-6 md:tw-justify-center">
           <img alt="Thành viên HLS" class="tw-w-32 sm:tw-w-36 tw-h-40 sm:tw-h-44 tw-rounded-lg hover:tw--translate-y-1 tw-transition tw-duration-300 tw-object-cover tw-flex-shrink-0 tw-shadow-md" height="176"
             src="image/herosection/1.webp"
             width="144" />
@@ -142,7 +142,7 @@
           <img alt="Thành viên HLS" class="tw-w-32 sm:tw-w-36 tw-h-40 sm:tw-h-44 tw-rounded-lg hover:tw--translate-y-1 tw-transition tw-duration-300 tw-object-cover tw-flex-shrink-0 tw-shadow-md" height="176"
             src="image/herosection/4.webp"
             width="144" />
-          <img alt="Thành viên HLS" class="tw-w-32 sm:tw-w-36 tw-h-40 sm:tw-h-44 tw-rounded-lg hover:tw--translate-y-1 tw-transition tw-duration-300 tw-object-cover tw-flex-shrink-0 tw-shadow-md tw-hidden md:tw-block" height="176"
+          <img alt="Thành viên HLS" class="tw-w-32 sm:tw-w-36 tw-h-40 sm:tw-h-44 tw-rounded-lg hover:tw--translate-y-1 tw-transition tw-duration-300 tw-object-cover tw-flex-shrink-0 tw-shadow-md" height="176"
             src="image/herosection/5.webp"
             width="144" />
         </div>
