--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@ Bên cạnh đó, HLS cũng đóng vai trò như một cầu nối giữa các b
 </ul>
 
 <ul>
--Được tham gia vào hoạt động hỗ trợ giải đáp thắc mắc trong học tập cùng các anh chị khóa trên
+-Tham gia vào hoạt động hỗ trợ giải đáp thắc mắc trong học tập cùng các anh chị khóa trên
 </ul>
 
               </p>
