--- a/index.html
+++ b/index.html
@@ -335,6 +335,175 @@ Bên cạnh đó, HLS cũng đóng vai trò như một cầu nối giữa các b
       </div>
     </section>
 
+    <!-- Hoạt động -->
+    <section class="section bg-alt">
+      <div class="container">
+        <h2 class="section-title text-center">Hoạt động của chúng tôi</h2>
+        <p class="section-subtitle text-center mx-auto" style="max-width: 680px">
+          Tham gia các hoạt động gắn kết, sôi động và ý nghĩa - nơi mọi thành viên cùng nhau tạo nên những kỷ niệm đáng nhớ.
+        </p>
+        <div class="row g-4 mt-3">
+          <div class="col-md-6 col-lg-4">
+            <div class="card h-100 activity-card border-0 shadow-sm">
+              <img src="image/hoat-dong/teambuilding/teambuilding1.webp" class="card-img-top" alt="Teambuilding" style="height: 220px; object-fit: cover;">
+              <div class="card-body">
+                <h5 class="fw-semibold mb-2">Teambuilding</h5>
+                <p class="text-muted mb-0">Gắn kết các thành viên qua các hoạt động teambuilding đầy năng lượng.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-4">
+            <div class="card h-100 activity-card border-0 shadow-sm">
+              <img src="image/hoat-dong/christmas2024/giangsinh.webp" class="card-img-top" alt="Giáng sinh" style="height: 220px; object-fit: cover;">
+              <div class="card-body">
+                <h5 class="fw-semibold mb-2">Giáng Sinh Ấm Áp</h5>
+                <p class="text-muted mb-0">Mùa lễ hội với không khí ấm áp và những món quà ý nghĩa.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-4">
+            <div class="card h-100 activity-card border-0 shadow-sm">
+              <img src="image/hoat-dong/birthday2025/sinhnhat.webp" class="card-img-top" alt="Sinh nhật CLB" style="height: 220px; object-fit: cover;">
+              <div class="card-body">
+                <h5 class="fw-semibold mb-2">Sinh nhật CLB</h5>
+                <p class="text-muted mb-0">Dấu mốc quan trọng của CLB với sự tham gia của tất cả các thế hệ.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="text-center mt-5">
+          <a href="hoat-dong.html" class="btn btn-outline-primary btn-lg px-5">
+            Xem tất cả hoạt động
+            <i class="bi bi-arrow-right ms-2"></i>
+          </a>
+        </div>
+      </div>
+    </section>
+
+    <!-- Sự kiện -->
+    <section class="section">
+      <div class="container">
+        <h2 class="section-title text-center">Sự kiện nổi bật</h2>
+        <p class="section-subtitle text-center mx-auto" style="max-width: 680px">
+          Workshop chuyên ngành, chia sẻ từ chuyên gia và các sự kiện kết nối với doanh nghiệp.
+        </p>
+        <div class="row g-4 mt-3 align-items-center">
+          <div class="col-lg-6">
+            <div class="event-feature-card">
+              <img src="image/su-kien/ws-erp/ws-erp-main.webp" alt="Workshop ERP" class="img-fluid rounded-4 shadow-lg">
+            </div>
+          </div>
+          <div class="col-lg-6">
+            <div class="event-badge mb-3">
+              <span class="badge bg-primary-subtle text-primary px-3 py-2 rounded-pill">
+                <i class="bi bi-calendar-event me-1"></i>
+                Workshop
+              </span>
+            </div>
+            <h3 class="fw-bold mb-3">ERP 4.0 - Powering Supply Chains with Data Intelligence</h3>
+            <p class="text-muted mb-4">
+              Workshop cung cấp kiến thức tổng quan về hệ thống ERP, vai trò và lợi ích trong quản trị doanh nghiệp hiện đại. 
+              Sinh viên được tìm hiểu về quy trình vận hành thực tế và cơ hội nghề nghiệp trong lĩnh vực ERP.
+            </p>
+            <div class="event-stats mb-4">
+              <div class="d-flex gap-4">
+                <div>
+                  <div class="text-primary fw-bold fs-4">200+</div>
+                  <div class="text-muted small">Sinh viên tham gia</div>
+                </div>
+                <div>
+                  <div class="text-primary fw-bold fs-4">5+</div>
+                  <div class="text-muted small">Chuyên gia</div>
+                </div>
+              </div>
+            </div>
+            <a href="su-kien.html" class="btn btn-primary px-4">
+              Khám phá các sự kiện
+              <i class="bi bi-arrow-right ms-2"></i>
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Cuộc thi -->
+    <section class="section bg-alt">
+      <div class="container">
+        <h2 class="section-title text-center">Các cuộc thi</h2>
+        <p class="section-subtitle text-center mx-auto" style="max-width: 680px">
+          Thử thách bản thân qua các cuộc thi học thuật đỉnh cao, nơi sinh viên thể hiện tài năng và kiến thức chuyên môn.
+        </p>
+        <div class="row g-4 mt-3">
+          <div class="col-lg-4">
+            <div class="competition-card">
+              <div class="competition-image">
+                <img src="image/cuoc-thi/srace2025/Srace2025.webp" alt="SCRACE" class="img-fluid">
+                <div class="competition-overlay">
+                  <span class="badge bg-success">Đã kết thúc</span>
+                </div>
+              </div>
+              <div class="competition-content">
+                <h5 class="fw-bold mb-2">SCRACE 2025</h5>
+                <p class="text-muted mb-3">Cuộc thi thường niên lớn nhất về Logistics và Quản lý chuỗi cung ứng.</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <span class="text-primary small fw-semibold">
+                    <i class="bi bi-trophy-fill me-1"></i>
+                    Cuộc thi chính
+                  </span>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="competition-card">
+              <div class="competition-image">
+                <img src="image/cuoc-thi/vnylt2024/vny2024.webp" alt="VNYLT" class="img-fluid">
+                <div class="competition-overlay">
+                  <span class="badge bg-secondary">Đã kết thúc</span>
+                </div>
+              </div>
+              <div class="competition-content">
+                <h5 class="fw-bold mb-2">VNYLT 2024</h5>
+                <p class="text-muted mb-3">Cuộc thi sáng tạo giải pháp logistics, lan tỏa kiến thức đến cộng đồng.</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <span class="text-primary small fw-semibold">
+                    <i class="bi bi-lightbulb-fill me-1"></i>
+                    Sáng tạo
+                  </span>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="competition-card">
+              <div class="competition-image">
+                <img src="image/cuoc-thi/nlkt2024/nlkt.webp" alt="NLKT" class="img-fluid">
+                <div class="competition-overlay">
+                  <span class="badge bg-success">Đã kết thúc</span>
+                </div>
+              </div>
+              <div class="competition-content">
+                <h5 class="fw-bold mb-2">Nhìn lại kinh tế 2024</h5>
+                <p class="text-muted mb-3">Cuộc thi học thuật kịch tính với các thử thách kiến thức kinh tế.</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <span class="text-primary small fw-semibold">
+                    <i class="bi bi-book-fill me-1"></i>
+                    Học thuật
+                  </span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="text-center mt-5">
+          <a href="cuoc-thi.html" class="btn btn-primary btn-lg px-5">
+            Xem chi tiết các cuộc thi
+            <i class="bi bi-arrow-right ms-2"></i>
+          </a>
+        </div>
+      </div>
+    </section>
+
     <!-- Call to Action -->
     <section class="cta-section">
       <div class="container position-relative">
