--- a/index.html
+++ b/index.html
@@ -408,11 +408,11 @@ Bên cạnh đó, HLS cũng đóng vai trò như một cầu nối giữa các b
             <div class="event-stats mb-4">
               <div class="d-flex gap-4">
                 <div>
-                  <div class="text-primary fw-bold fs-4">200+</div>
+                  <div class="text-primary fw-bold fs-4">100+</div>
                   <div class="text-muted small">Sinh viên tham gia</div>
                 </div>
                 <div>
-                  <div class="text-primary fw-bold fs-4">5+</div>
+                  <div class="text-primary fw-bold fs-4">2</div>
                   <div class="text-muted small">Chuyên gia</div>
                 </div>
               </div>
